[gd_scene load_steps=10 format=3 uid="uid://pifn04khdq65"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_vkw7b"]
[ext_resource type="PackedScene" uid="uid://dxxdbhrg4e6qq" path="res://scenes/levels/Player.tscn" id="2_u2bc1"]
[ext_resource type="PackedScene" uid="uid://idb7um4yw864" path="res://scenes/levels/health_station.tscn" id="4_2cudw"]
[ext_resource type="Texture2D" uid="uid://d2ap7oi85wt5e" path="res://graphics/coin.png" id="4_dcpfd"]
[ext_resource type="AudioStream" uid="uid://nfe1i0lir16c" path="res://audio/box_dies.mp3" id="5_cyrps"]
[ext_resource type="AudioStream" uid="uid://3ergoo3qelgf" path="res://audio/coin.mp3" id="6_lyin6"]
[ext_resource type="Script" path="res://scenes/levels/MenuButton.gd" id="7_nvnob"]
[ext_resource type="Script" path="res://scenes/levels/SoundMixer.gd" id="9_xd6mf"]
[ext_resource type="AudioStream" uid="uid://b2lglsnn6j8kq" path="res://audio/exp.mp3" id="11_7rtqw"]

[node name="Game" type="Node2D"]
script = ExtResource("1_vkw7b")

[node name="GenMap" type="Node2D" parent="."]
position = Vector2(-24, -9)

[node name="ShadowLayer" type="Node" parent="."]

[node name="HealthStation" parent="." instance=ExtResource("4_2cudw")]
position = Vector2(246, -9)

[node name="Nades" type="Node2D" parent="."]
position = Vector2(-24, -9)

[node name="UI" type="CanvasLayer" parent="."]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="Coins" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 0.367
anchor_right = 0.5
offset_left = -371.284
offset_top = 15.5
offset_right = -332.5
offset_bottom = 38.5
size_flags_horizontal = 10
size_flags_vertical = 2
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="UI"]
visible = false
anchors_preset = -1
anchor_top = 0.334
anchor_bottom = 0.455
offset_left = 5.5
offset_top = 0.567993
offset_right = 384.5
offset_bottom = -2.84
text = "В игре ~600 строк кода"

[node name="PlayerHealth" type="Label" parent="UI"]
visible = false
offset_left = 10.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 33.0
text = "Health: "

[node name="CrateNum" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 67.0
offset_right = 65.0
offset_bottom = 90.0
text = "Crates:"

[node name="TextureRect" type="TextureRect" parent="UI"]
offset_left = 2.5
offset_top = -1.5
offset_right = 66.5
offset_bottom = 61.5
texture = ExtResource("4_dcpfd")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 214.0
offset_top = 139.0
offset_right = -150.0
offset_bottom = -107.0

[node name="CenterText" type="Label" parent="UI/CenterContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="MenuButton" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.392
anchor_right = 0.5
anchor_bottom = 0.095
offset_left = 25.916
offset_top = 33.0
offset_right = -51.5
offset_bottom = 2.43999
text = "Shop"
item_count = 1
popup/item_0/text = "Buy Medkit"
popup/item_0/id = 0
script = ExtResource("7_nvnob")

[node name="FPS" type="Label" parent="UI"]
offset_left = 76.0
offset_right = 116.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TimerAttackReset" type="Timer" parent="."]
wait_time = 0.526

[node name="Items" type="Node2D" parent="."]
position = Vector2(-24, -9)

[node name="Player" parent="." instance=ExtResource("2_u2bc1")]
position = Vector2(-24, -9)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="BarsLayer" type="Node" parent="."]

[node name="SoundMixer" type="Node2D" parent="."]
position = Vector2(-24, -9)
script = ExtResource("9_xd6mf")

[node name="box_sound" type="AudioStreamPlayer2D" parent="SoundMixer"]
position = Vector2(-294, -163)
stream = ExtResource("5_cyrps")
volume_db = -4.119
attenuation = 0.164939

[node name="coin_sound" type="AudioStreamPlayer2D" parent="SoundMixer"]
position = Vector2(-294, -163)
stream = ExtResource("6_lyin6")
volume_db = -13.793
attenuation = 0.164939

[node name="expl" type="AudioStreamPlayer2D" parent="SoundMixer"]
position = Vector2(-294, -163)
stream = ExtResource("11_7rtqw")
attenuation = 0.0525563

[node name="MapCheckTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Enemies" type="Node2D" parent="."]
position = Vector2(-24, -9)

[connection signal="pressed" from="UI/MenuButton" to="UI/MenuButton" method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerAttackReset" to="." method="_on_timer_attack_reset_timeout"]
[connection signal="finished" from="SoundMixer/box_sound" to="SoundMixer" method="_on_box_sound_finished"]
[connection signal="finished" from="SoundMixer/coin_sound" to="SoundMixer" method="_on_coin_sound_finished"]
[connection signal="finished" from="SoundMixer/expl" to="SoundMixer" method="_on_coin_sound_finished"]
[connection signal="timeout" from="MapCheckTimer" to="." method="_on_map_check_timer_timeout"]
